--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,18 @@ body{
     
 }
 
+
+
 /* Header */
 
 header{
-    width: 100%;
-    background-color:#2c3845;
+    width: 100%; 
+    background-color:#693c72;  
     margin-bottom: 20px;
 }
+
+
+
 
 header h1{
     font-size: 1.3rem;
@@ -143,6 +148,15 @@ select{
     text-align: left;   
 }
 
+
+/* Focus */
+
+:focus {
+    background: #693c72;
+ 
+  
+  }
+
 /* Radio and Checkbox */
 
 legend {
@@ -182,9 +196,9 @@ textarea{
 /* Button */
 button{
 width: 100%;
-margin-top: 20px auto;
+margin-top: 12px;
 padding: 20px 30px;
-background-color:#3fa4aa;
+background-color:#693c72;
 border: 0;
 border-radius: 3px;
 color: white;
@@ -198,12 +212,13 @@ font-weight: 500;
 /* Footer */
 
 footer {
-    margin-top: 25px ;
+    margin-top: 25px;
+    padding-bottom: 100px ;
     text-align: center;
     font-size: 0.8rem;
     color:gray;
     font-style: italic;
-    margin-bottom: 100px;
+    
 
 }
 
@@ -256,11 +271,5 @@ footer {
         width: 30%;
         margin-right: 340px;
     }
-
-
-
-
-  
-
-
 }
+
