--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,7 @@
 
 body{
     font-family: 'Merriweather Sans', sans-serif;
-    width: 100%;
-    
+    width: 100%;   
 }
 
 
@@ -112,7 +111,7 @@ label
 
 input,
 select{
-    margin: 15px 0;
+    margin: 8px 0;
     background-color: #eef0f2;
     padding: 12px;
     border-radius:3px;
@@ -149,6 +148,12 @@ select{
 }
 
 
+option:checked {
+    box-shadow: 0 0 0 3px lime;
+    color: red;
+  }
+
+
 /* Focus */
 
 :focus {
@@ -168,6 +173,9 @@ legend {
 margin-left: 5px;
 margin-right: 10px;
 }
+
+
+
 
 
 /* Text Area */
@@ -204,6 +212,7 @@ border-radius: 3px;
 color: white;
 font-size: 1.1rem;
 font-weight: 500;
+cursor:pointer;
 }
 
 
