--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,10 @@ footer {
 
 @media screen and (min-width: 768px){
 
+    form{
+        max-width: 768px;
+    }
+
     /* main */
     main{
         margin-top: 50px;
@@ -260,25 +264,29 @@ footer {
 
     /* form part 1 */
 
-    .label-pat1-form{
-        margin-left: 0;
-        align-self: center;
-    }
-
+   
     .flex-form {
-        display: flex;
+     display: flex;  
         
     }
 
-    .input-part1-form{
-        width: 80%;
-        margin: 0;  
-    }
+    .flex-form input,
+    .flex-form select{    
+    flex-basis: 75%;
+  }
+  
+  .flex-form label {
+    flex-basis: 25%;
+    margin: auto 0; 
+  }
+
+  .flex-form .box-zipcode {
+    flex-basis: 25%;
+  }
+
+  
 
 
-    .box-zipcode{
-        width: 30%;
-        margin-right: 340px;
-    }
+
 }
 
